# jobly

./: .env.example  .gitignore  README.md  config.example.yaml  generate_jobs.py  profile_template.json  pyproject.toml
app/adapters/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py  workday.py
app/cli/: main.py
app/gmail/: auth.py  client.py  parser.py
app/llm/: evaluator.py  resume_reviewer.py
app/models/: schema.py
app/sources/: github_readme.py
app/utils/: browser.py  config.py  filter.py  hashing.py  logging.py
tests/: test_adapters.py  test_filter.py  test_parser.py
tests/fixtures/: swelist_email.html
